src/test/ui/parser/removed-syntax-uniq-mut-ty.stderr
error: expected one of `>`, lifetime, or type, found `mut`
  --> $DIR/removed-syntax-uniq-mut-ty.rs:13:20
   |
LL | type mut_box = Box<mut isize>; //~ ERROR expected one of `>`, lifetime, or type, found `mut`
   |                    ^^^ expected one of `>`, lifetime, or type here

error: aborting due to previous error

